2008-10-27  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/tasque.in:
	* src/Makefile.am: Install to $(libdir) instead of $(prefix)/lib, to
	properly support 64-bit environments.  Fixes bug #540983.

2008-10-26  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/Backends/Sqlite/SqliteTask.cs: Sanitize task name text before
	inserting into database.  Fixes crasher bug #537911.  Thanks to Geert
	van Dijk and Loganathan Subramaniam for their assistance with this
	patch.

	* src/Backends/Sqlite/SqliteBackend.cs: Add SanitizeText method, which
	currently just replaces single apostrophes with double-apostrophes.

2008-10-26  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/TaskWindow.cs:
	* src/Application.cs: Support "--quiet" command line option to start
	Tasque with its main window hidden at first.  Also added "--backend
	My.Backend.Class", though the old behavior of just allowing
	"My.Backend.Class" is still supported.  Thanks to Charles Schaefer
	for his help on this patch.

2008-10-26  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/RemoteControl.cs: Add CreateTask override that enables due date
	parsing (assuming it is also enabled in Tasque preferences).  Fixes
	bug #542113, patch courtesy of Johannes.

2008-10-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	Additional fixes (including crash fix) for bug #532766, thanks to Joel Bennett.

	* src/TaskGroup.cs: Override OnStyleSet to manage the Pango markup of
	the header.

	* src/TaskWindow.cs: Move targetVBox init code back to constructor,
	don't call PopulateWindow in OnStyleSet (obsoleted by fixes to
	TaskGroup), and be sure to update the addTaskEntry color based on the
	new style, if it's showing the default text.

2008-10-21  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* src/NoteDialog.cs:
	* src/Backends/Rtm/RtmPreferencesWidget.cs: Do not paint the background
	white.

	* src/Utilities.cs: Add ColorGetHex method, stolen from Banshee, that